cmake_minimum_required(VERSION 3.16)
project(condition_variable)

set(CMAKE_CXX_STANDARD 11)

add_executable(condition_variable single.cpp basic.cpp mutiple.cpp mutiple_mutiple.h mutiple_mutiple.cpp mutiple_mutiple.cpp mutiple_mutiple.cpp mutiple_sync.cpp mutiple_mutiple_sync.cpp mutiple_mutiple_stop.cpp)
